WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242334
SharedVideoFrameWriter can hang on its semaphore in case of bad CVPixelBuffers
https://bugs.webkit.org/show_bug.cgi?id=242334
Summary
SharedVideoFrameWriter can hang on its semaphore in case of bad CVPixelBuffers
youenn fablet
Reported
2022-07-05 02:34:39 PDT
SharedVideoFrameWriter can hang on its semaphore in case of bad CVPixelBuffers
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-07-05 02:39:38 PDT
<
rdar://95326241
>
youenn fablet
Comment 2
2022-07-05 02:56:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2072
EWS
Comment 3
2022-07-05 08:52:14 PDT
Committed
252137@main
(b823acbd5216): <
https://commits.webkit.org/252137@main
> Reviewed commits have been landed. Closing PR #2072 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug