SharedVideoFrameWriter can hang on its semaphore in case of bad CVPixelBuffers https://bugs.webkit.org/show_bug.cgi?id=242334 rdar://95326241

Reviewed by Eric Carlson.

Before writing to shared memory, the writer is waiting on its counterpart reader to signal that memory can be written.
This works fine except if the writer fails to write data, in which case the reader will not notify that memory can be written.
Write failure for instance happens if data cannot be read from the pixel buffer.
To fix this, the writer will signal its semaphore that it does not need to wait in case of write failure.

* Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.cpp:
(WebKit::SharedVideoFrameWriter::wait):
(WebKit::SharedVideoFrameWriter::prepareWriting):
(WebKit::SharedVideoFrameWriter::writeBuffer):
(WebKit::SharedVideoFrameWriter::signalInCaseOfError):
* Source/WebKit/WebProcess/GPU/webrtc/SharedVideoFrame.h:

Canonical link: https://commits.webkit.org/252136@main